<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="25">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/check"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutId="stok_kontrol"
        android:shortcutShortLabel="@string/shortcut1"
        android:shortcutLongLabel="@string/shortcut1_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage = "noyansoft.ecssistem"
            android:targetClass="noyansoft.ecssistem.MainActivity" />
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage = "noyansoft.ecssistem"
            android:targetClass="noyansoft.ecssistem.ActSecim" />
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage = "noyansoft.ecssistem"
            android:targetClass="noyansoft.ecssistem.StokKontrol" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/add_s"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutId="stok_sayim"
        android:shortcutShortLabel="@string/shortcut2"
        android:shortcutLongLabel="@string/shortcut2_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage = "noyansoft.ecssistem"
            android:targetClass="noyansoft.ecssistem.MainActivity" />
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage = "noyansoft.ecssistem"
            android:targetClass="noyansoft.ecssistem.ActSecim" />
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage = "noyansoft.ecssistem"
            android:targetClass="noyansoft.ecssistem.StokSayim" />
    </shortcut>

</shortcuts>