<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maincon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall3">

    <android.support.v7.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#00282828"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_bt3"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <ProgressBar
                android:id="@+id/pbbar"
                style="@android:style/Widget.Material.Light.ProgressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"

                android:indeterminateTint="@color/cardview_light_background"
                android:keepScreenOn="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btnlogin"
                app:layout_constraintEnd_toEndOf="@+id/btnlogin"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/btnlogin"
                app:layout_constraintTop_toTopOf="@+id/btnlogin"
                app:layout_constraintVertical_bias="0.576" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_weight="0.35"
                android:background="@drawable/rounded_bt3"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/cardview_light_background"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.35"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.35"
                    android:background="@drawable/rounded_et"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5">

                    <EditText
                        android:id="@+id/edtuserid"
                        style="@android:style/Widget.Material.Light.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_et"
                        android:drawableLeft="@mipmap/user"
                        android:fontFamily="sans-serif"
                        android:hint="@string/user_name"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textColorHint="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edtpass"
                        style="@android:style/Widget.Material.Light.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_et"
                        android:drawableLeft="@mipmap/lock2"

                        android:fontFamily="sans-serif"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:password="true"
                        android:textAllCaps="false"
                        android:textColor="@color/cardview_light_background"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textColorHint="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtuserid" />

                    <TextView
                        android:id="@+id/welcometxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="30sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_et2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/serv"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:background="@mipmap/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>